package com.MoTraCoCa.model;



public record ProductConfiguration(Product product, int duration) {
}
