@startuml

class Customer {
id: long
paymentInfo: String
vehicles: List<Vehicle>
orders: List<Order>
}

class Vehicle {
  id: long
  vin: Vin
  offeredServices: List<VehicleService>
  usageRights:List<UsageRight
}

class Product {
  id: long
  articleNumber: ArticleNumber
  price: Price
  includedServices: List<Service>
}

class ProductConfiguration{
duration: months
product: Product
}

class Order{
id: long
isPayed: boolean
vehicle: Vehicle
totalPrice: Price
products: List<ProductConfiguration>
date: Date
}

class Service{
id:long
name:String
}


class UsageRight {
  id: long
  startDate: Date
  endDate: Date
  product: Product
}

Customer --> Vehicle
Customer --> Order
Vehicle --> Service
Vehicle --> UsageRight
Order --> ProductConfiguration
ProductConfiguration --> Product
UsageRight --> Product
Product --* Service

@enduml
